# archeotag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
docker/ocr/: Dockerfile
src/archeotag/ocr/pdf2markdown/: __init__.py  pdf2markdown.py
src/archeotag/utils/archeolog/: __init__.py
src/archeotag/utils/filesystem/: __init__.py
tests/test_archeotag/ocr/pdf2markdown/: test_pdf2markdown.py
tests/test_archeotag/utils/filesystem/: test_filesystem.py
