[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archeotag"
version = "0.0.1"
authors = [
  { name="Mirek Kolar", email="mirekkolar.cercany@gmail.com" },
]
description = "Python application automating tagging, entity and attribute extraction from archeological reports."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]